# RUST-PROJECTS

./: README.md
backend/rust_crud_api/: .env  Cargo.toml
backend/rust_crud_api/migrations/: 20230508192126_crud_api.sql
backend/rust_crud_api/src/: errors.rs  main.rs  models.rs  views.rs
real-time_webcam_streaming_server/rcvweb/: Cargo.toml
real-time_webcam_streaming_server/rcvweb/src/: main.rs
rust_embedded_systems/esp32rs1/: Cargo.toml
rust_embedded_systems/esp32rs1/.cargo/: config.toml
rust_embedded_systems/esp32rs1/src/: main.rs
rust_embedded_systems/ldr-rust-webserver-wifi/: Cargo.toml
rust_embedded_systems/ldr-rust-webserver-wifi/.cargo/: config.toml
rust_embedded_systems/ldr-rust-webserver-wifi/src/: main.rs
rust_embedded_systems/remote-servo-motor-control/: Cargo.toml
rust_embedded_systems/remote-servo-motor-control/.cargo/: config.toml
rust_embedded_systems/remote-servo-motor-control/src/: main.rs
rust_embedded_systems/rgb-led/: Cargo.toml
rust_embedded_systems/rgb-led/src/: main.rs
rust_embedded_systems/rust-esp32webserver-clientwifi/: Cargo.toml
rust_embedded_systems/rust-esp32webserver-clientwifi/src/: main.rs
rust_embedded_systems/ultrasonic-webserver/: Cargo.toml
rust_embedded_systems/ultrasonic-webserver/.cargo/: config.toml
rust_embedded_systems/ultrasonic-webserver/src/: main.rs
rust_embedded_systems/web-controlled-led/: Cargo.toml
rust_embedded_systems/web-controlled-led/src/: main.rs
